Second round of stopwords removal complete

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "4  annoy experi round ever sinc updat season wild...          0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,42 +772,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grouping 'final_word_corpus' by satisfaction\n",
-    "reviews_by_satisfaction = corpus_satisfaction.groupby(\"satisfied\")\n",
-    "satisfied = reviews_by_satisfaction.get_group(1) # satisfied users word tokens\n",
-    "unsatisfied = reviews_by_satisfaction.get_group(0) # unsatisfied users word tokens\n",
+    "def create_corp_dict(dataframe):\n",
+    "    \"\"\"Function creates dictionary containing satisfied and unsatisfied user word tokens\"\"\"\n",
+    "\n",
+    "    # Grouping 'final_word_corpus' by satisfaction\n",
+    "    reviews_by_satisfaction = corpus_satisfaction.groupby(\"satisfied\")\n",
+    "    satisfied = reviews_by_satisfaction.get_group(1) # satisfied users word tokens\n",
+    "    unsatisfied = reviews_by_satisfaction.get_group(0) # unsatisfied users word tokens\n",
     "\n",
     "\n",
-    "satisfied_corpos = [] # 2D array of satisfied reviews words\n",
-    "unsatisfied_corpos = [] # 2D array of ussatisfied reviews words\n",
+    "    satisfied_corpos = [] # 2D array of satisfied reviews words\n",
+    "    unsatisfied_corpos = [] # 2D array of ussatisfied reviews words\n",
     "\n",
     "\n",
-    "# extracting every word in satisfied users review\n",
-    "for word in satisfied[\"final_word_corpus\"]:\n",
-    "    satisfied_corpos.append(word.split())\n",
-    "final_satisfied_corpos = [word for words in satisfied_corpos for word in words] # 1D array of satisfied reviews words\n",
-    "final_satisfied_corpos_string = \" \".join(final_satisfied_corpos) # String containing all satisfied user tokens\n",
+    "    # extracting every word in satisfied users review\n",
+    "    for word in satisfied[\"final_word_corpus\"]:\n",
+    "        satisfied_corpos.append(word.split())\n",
+    "    final_satisfied_corpos = [word for words in satisfied_corpos for word in words] # 1D array of satisfied reviews words\n",
+    "    final_satisfied_corpos_string = \" \".join(final_satisfied_corpos) # String containing all satisfied user tokens\n",
     "\n",
-    "# extracting every word in unsatisfied users review\n",
-    "for word in unsatisfied[\"final_word_corpus\"]:\n",
-    "    unsatisfied_corpos.append(word.split())\n",
-    "final_unsatisfied_corpos = [word for words in unsatisfied_corpos for word in words] # 1D array of unsatisfied reviews words\n",
-    "final_unsatisfied_corpos_string = \" \".join(final_unsatisfied_corpos) # String containing all unsatisfied user tokens\n",
+    "    # extracting every word in unsatisfied users review\n",
+    "    for word in unsatisfied[\"final_word_corpus\"]:\n",
+    "        unsatisfied_corpos.append(word.split())\n",
+    "    final_unsatisfied_corpos = [word for words in unsatisfied_corpos for word in words] # 1D array of unsatisfied reviews words\n",
+    "    final_unsatisfied_corpos_string = \" \".join(final_unsatisfied_corpos) # String containing all unsatisfied user tokens\n",
     "\n",
-    "# Adding words from satisfied and unsatisfied reviews into dictionary for frequency count\n",
-    "satisfied_unsatisfied_words ={\n",
-    "    \"satisfied\": final_satisfied_corpos_string,\n",
-    "    \"unsatisfied\": final_unsatisfied_corpos_string\n",
-    "}"
+    "    # Adding words from satisfied and unsatisfied reviews into dictionary for frequency count\n",
+    "    satisfied_unsatisfied_words ={\n",
+    "        \"satisfied\": final_satisfied_corpos_string,\n",
+    "        \"unsatisfied\": final_unsatisfied_corpos_string\n",
+    "    }\n",
+    "    return satisfied_unsatisfied_words\n",
+    "\n",
+    "satisfied_unsatisfied_words = create_corp_dict(corpus_satisfaction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +859,7 @@
        "unsatisfied  annoy experi round ever sinc updat season wild..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,29 +873,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculating Document term matrix and converting to DataFrame.\n",
     "cv = CountVectorizer(stop_words=\"english\")\n",
     "concatenated_reviews_cv = cv.fit_transform(concatenated_reviews[\"review_tokens\"])\n",
-    "document_term_matrix = pd.DataFrame(concatenated_reviews_cv.toarray(),columns =cv.get_feature_names_out(), index=[\"satisfied\", \"unsatisfied\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "document_term_matrix = pd.DataFrame(concatenated_reviews_cv.toarray(),columns =cv.get_feature_names_out(), index=[\"satisfied\", \"unsatisfied\"])\n",
+    "\n",
     "# Transposing dataframe for easy manipulation across columns\n",
     "document_term_matrix = document_term_matrix.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +992,7 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1116,7 @@
        "4  round ever wild dog unabl without crack cd int...          0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,8 +1125,212 @@
     "# Removing custom stop words from already lemmatized dataframe\n",
     "# custom_stop_words\n",
     "data[\"final_word_corpus\"] = data[\"final_word_corpus\"].apply(lambda x: ' '.join(word for word in x.split() if word not in (custom_stop_words)))\n",
-    "final_df = data[[\"final_word_corpus\", \"satisfied\"]]\n",
-    "final_df.head()"
+    "corpus_satisfaction_2 = data[[\"final_word_corpus\", \"satisfied\"]]\n",
+    "corpus_satisfaction_2.head() # DF containing lemmatized reviews with 2 rounds of dropped stopwords."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>satisfied</th>\n",
+       "      <td>play year quit addict u develop plss fix issu ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unsatisfied</th>\n",
+       "      <td>annoy experi round ever sinc updat season wild...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 review_tokens\n",
+       "satisfied    play year quit addict u develop plss fix issu ...\n",
+       "unsatisfied  annoy experi round ever sinc updat season wild..."
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Second round of count vectorization and creation of doc-term matrix.\n",
+    "satisfied_unsatisfied_words_2 = create_corp_dict(corpus_satisfaction_2)\n",
+    "\n",
+    "# DataFrame of all word lemmas used in satisfied and unsatisfied reviews (round 2)\n",
+    "concatenated_reviews_2 = pd.DataFrame(satisfied_unsatisfied_words_2, index=[\"review_tokens\"])\n",
+    "concatenated_reviews_2 = concatenated_reviews_2.T # transposed dataframe\n",
+    "concatenated_reviews_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>abandon</th>\n",
+       "      <th>abeg</th>\n",
+       "      <th>abel</th>\n",
+       "      <th>abid</th>\n",
+       "      <th>abiet</th>\n",
+       "      <th>abil</th>\n",
+       "      <th>abit</th>\n",
+       "      <th>abl</th>\n",
+       "      <th>abliti</th>\n",
+       "      <th>abomin</th>\n",
+       "      <th>...</th>\n",
+       "      <th>zag</th>\n",
+       "      <th>zero</th>\n",
+       "      <th>zig</th>\n",
+       "      <th>zillion</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>zm</th>\n",
+       "      <th>zombi</th>\n",
+       "      <th>zombiesod</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>zoom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>satisfied</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>89</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>183</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unsatisfied</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 5423 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             abandon  abeg  abel  abid  abiet  abil  abit  abl  abliti  \\\n",
+       "satisfied          0     2     1     1      1    14     2   89       1   \n",
+       "unsatisfied        2     0     0     0      0     5     0   70       0   \n",
+       "\n",
+       "             abomin  ...  zag  zero  zig  zillion  zip  zm  zombi  zombiesod  \\\n",
+       "satisfied         1  ...    0     7    0        2    0   1    183          1   \n",
+       "unsatisfied       0  ...    1    11    1        0    1   0     67          0   \n",
+       "\n",
+       "             zone  zoom  \n",
+       "satisfied      26     3  \n",
+       "unsatisfied     5     1  \n",
+       "\n",
+       "[2 rows x 5423 columns]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_2 = CountVectorizer(stop_words=\"english\")\n",
+    "\n",
+    "concatenated_reviews_cv_2 = cv_2.fit_transform(concatenated_reviews_2[\"review_tokens\"])\n",
+    "document_term_matrix_2 = pd.DataFrame(concatenated_reviews_cv_2.toarray(), columns= cv_2.get_feature_names_out(), index=[\"satisfied\", \"unsatisfied\"])\n",
+    "document_term_matrix_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting word clouds.\n"
    ]
   }
  ],
