Train test split

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from wordcloud import WordCloud\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
+    "from sklearn import model_selection\n",
     "from matplotlib import pyplot as plt\n",
     "from nltk.tokenize import word_tokenize\n",
     "from sklearn.feature_extraction.text import CountVectorizer"
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
        "4  An annoying experience all round. Ever since t...        1"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +246,7 @@
        "max       5.000000"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +341,7 @@
        "4  An annoying experience all round. Ever since t...        1          0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +364,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +549,7 @@
        "4  an annoying experience all round ever since th...        1          0"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +661,7 @@
        "4  annoy experi round ever sinc updat season wild...  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +739,7 @@
        "4  annoy experi round ever sinc updat season wild...          0"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +840,7 @@
        "unsatisfied  annoy experi round ever sinc updat season wild..."
       ]
      },
-     "execution_count": 180,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +973,7 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1097,7 @@
        "4  round ever wild dog unabl without crack cd int...          0"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1200,10 +1201,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# splitting data into training and testing set\n",
+    "\n",
+    "train_set, test_set = model_selection.train_test_split(corpus_satisfaction_2, test_size=0.25, random_state=20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of training set 2911\n",
+      "Length of testing set 971\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Length of training set {}\".format(len(train_set)))\n",
+    "print(\"Length of testing set {}\".format(len(test_set)))"
+   ]
   }
  ],
  "metadata": {
