--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -10,10 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing Data Analysis libraries\n",
     "import re\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -21,15 +22,28 @@
     "from wordcloud import WordCloud\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
-    "from sklearn import model_selection\n",
     "from matplotlib import pyplot as plt\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# Importing Model building libraries\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Warning control\n",
+    "import warnings \n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +119,7 @@
        "4  An annoying experience all round. Ever since t...        1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +173,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +260,7 @@
        "max       5.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +355,7 @@
        "4  An annoying experience all round. Ever since t...        1          0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +378,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +563,7 @@
        "4  an annoying experience all round ever since th...        1          0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +675,7 @@
        "4  annoy experi round ever sinc updat season wild...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +753,7 @@
        "4  annoy experi round ever sinc updat season wild...          0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +854,7 @@
        "unsatisfied  annoy experi round ever sinc updat season wild..."
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +987,7 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1111,7 @@
        "4  round ever wild dog unabl without crack cd int...          0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1201,32 +1215,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# splitting data into training and testing set\n",
+    "# Vectorizer (uni and bigrams)\n",
+    "# ngram_range=(1,3)\n",
+    "vec = TfidfVectorizer(stop_words=\"english\", ngram_range=(1,3))\n",
+    "vec.fit(corpus_satisfaction_2[\"final_word_corpus\"])\n",
     "\n",
-    "train_set, test_set = model_selection.train_test_split(corpus_satisfaction_2, test_size=0.25, random_state=20)\n"
+    "\n",
+    "# splitting data into training and testing set\n",
+    "x = corpus_satisfaction_2[\"final_word_corpus\"]\n",
+    "x = vec.transform(x)\n",
+    "y = corpus_satisfaction_2[\"satisfied\"]\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = model_selection.train_test_split(x,y, test_size=0.1, random_state=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training set 2911\n",
-      "Length of testing set 971\n"
+      "Length of training set 69980\n",
+      "Length of testing set 7440\n"
      ]
     }
    ],
    "source": [
-    "print(\"Length of training set {}\".format(len(train_set)))\n",
-    "print(\"Length of testing set {}\".format(len(test_set)))"
+    "print(\"Length of training set %d\" %((x_train).getnnz()))\n",
+    "print(\"Length of testing set %d\" %((x_test).getnnz()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Logistic Regression model is 74.81%\n",
+      "Accuracy of KNN model is 75.06%\n",
+      "Accuracy of Decision Trees model is 67.61%\n",
+      "Accuracy of Random Forest model is 75.32%\n",
+      "Accuracy of XGBClassifier model is 69.92%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model training without hyper parameters\n",
+    "from sklearn.metrics import r2_score\n",
+    "names = [\"Logistic Regression\", \"KNN\", \"Decision Trees\", \"Random Forest\", \"XGBClassifier\"]\n",
+    "\n",
+    "classifiers = {\n",
+    "    LogisticRegression(),\n",
+    "    KNeighborsClassifier(),\n",
+    "    DecisionTreeClassifier(),\n",
+    "    RandomForestClassifier(),\n",
+    "    XGBClassifier(use_label_encoder=False, eval_metric= 'logloss')\n",
+    "}\n",
+    "\n",
+    "models = zip(names, classifiers)\n",
+    "\n",
+    "# Training each model and printing accuracy stores\n",
+    "for name, model in models:\n",
+    "    model_ = model.fit(x_train, y_train)\n",
+    "    prediction = model_.predict(x_test)\n",
+    "    print(f\"Accuracy of {name} model is {'{0:.2f}'.format(accuracy_score(prediction, y_test)*100)}%\")"
    ]
   }
  ],
