--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "# Warning control\n",
     "import warnings \n",
@@ -1215,13 +1216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Vectorizer (uni and bigrams)\n",
     "# ngram_range=(1,3)\n",
-    "vec = TfidfVectorizer(stop_words=\"english\", ngram_range=(1,3))\n",
+    "vec = TfidfVectorizer(stop_words=\"english\", ngram_range=(1,2))\n",
     "vec.fit(corpus_satisfaction_2[\"final_word_corpus\"])\n",
     "\n",
     "\n",
@@ -1230,20 +1231,20 @@
     "x = vec.transform(x)\n",
     "y = corpus_satisfaction_2[\"satisfied\"]\n",
     "\n",
-    "x_train, x_test, y_train, y_test = model_selection.train_test_split(x,y, test_size=0.1, random_state=15)"
+    "x_train, x_test, y_train, y_test = model_selection.train_test_split(x,y, test_size=0.20, random_state=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training set 69980\n",
-      "Length of testing set 7440\n"
+      "Length of training set 90154\n",
+      "Length of testing set 21992\n"
      ]
     }
    ],
@@ -1254,18 +1255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Logistic Regression model is 74.81%\n",
-      "Accuracy of KNN model is 75.06%\n",
-      "Accuracy of Decision Trees model is 67.61%\n",
-      "Accuracy of Random Forest model is 75.32%\n",
-      "Accuracy of XGBClassifier model is 69.92%\n"
+      "Accuracy of Logistic Regression model is 69.76%\n",
+      "Accuracy of KNN model is 73.10%\n",
+      "Accuracy of Decision Trees model is 68.60%\n",
+      "Accuracy of Random Forest model is 74.77%\n",
+      "Accuracy of XGBClassifier model is 71.30%\n"
      ]
     }
    ],
@@ -1276,7 +1277,7 @@
     "\n",
     "classifiers = {\n",
     "    LogisticRegression(),\n",
-    "    KNeighborsClassifier(),\n",
+    "    KNeighborsClassifier(n_neighbors = 9),\n",
     "    DecisionTreeClassifier(),\n",
     "    RandomForestClassifier(),\n",
     "    XGBClassifier(use_label_encoder=False, eval_metric= 'logloss')\n",
@@ -1289,6 +1290,21 @@
     "    model_ = model.fit(x_train, y_train)\n",
     "    prediction = model_.predict(x_test)\n",
     "    print(f\"Accuracy of {name} model is {'{0:.2f}'.format(accuracy_score(prediction, y_test)*100)}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Models Hyper-parameter tuning (Random search CV)\n",
+    "\n",
+    "# parameters dictionary\n",
+    "param_distributions = {\n",
+    "    'learning_rate' : [0.1, 0.01, 0.02],\n",
+    "    'n_estimators' : [100],\n",
+    "}"
    ]
   }
  ],
