--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "# Importing Model building libraries\n",
+    "from sklearn.svm import SVC\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn import model_selection\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +121,7 @@
        "4  An annoying experience all round. Ever since t...        1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +175,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
        "max       5.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
        "4  An annoying experience all round. Ever since t...        1          0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +380,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +565,7 @@
        "4  an annoying experience all round ever since th...        1          0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +677,7 @@
        "4  annoy experi round ever sinc updat season wild...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +755,7 @@
        "4  annoy experi round ever sinc updat season wild...          0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +856,7 @@
        "unsatisfied  annoy experi round ever sinc updat season wild..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +989,7 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1113,7 @@
        "4  round ever wild dog unabl without crack cd int...          0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1211,12 +1212,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Training"
+    "# Model Training (Without hyper parameters tuning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,15 +1237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training set 90154\n",
-      "Length of testing set 21992\n"
+      "Length of training set 62195\n",
+      "Length of testing set 15225\n"
      ]
     }
    ],
@@ -1255,17 +1256,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Accuracy of SVC model is 70.40%\n",
       "Accuracy of Logistic Regression model is 69.76%\n",
-      "Accuracy of KNN model is 73.10%\n",
-      "Accuracy of Decision Trees model is 68.60%\n",
-      "Accuracy of Random Forest model is 74.77%\n",
+      "Accuracy of Decision Trees model is 67.05%\n",
+      "Accuracy of Random Forest model is 73.62%\n",
+      "Accuracy of KNN model is 74.77%\n",
       "Accuracy of XGBClassifier model is 71.30%\n"
      ]
     }
@@ -1273,13 +1275,14 @@
    "source": [
     "# Model training without hyper parameters\n",
     "from sklearn.metrics import r2_score\n",
-    "names = [\"Logistic Regression\", \"KNN\", \"Decision Trees\", \"Random Forest\", \"XGBClassifier\"]\n",
+    "names = [\"SVC\", \"Logistic Regression\", \"Decision Trees\", \"Random Forest\", \"KNN\", \"XGBClassifier\"]\n",
     "\n",
     "classifiers = {\n",
+    "    SVC(),\n",
     "    LogisticRegression(),\n",
-    "    KNeighborsClassifier(n_neighbors = 9),\n",
     "    DecisionTreeClassifier(),\n",
     "    RandomForestClassifier(),\n",
+    "    KNeighborsClassifier(n_neighbors = 9),\n",
     "    XGBClassifier(use_label_encoder=False, eval_metric= 'logloss')\n",
     "}\n",
     "\n",
@@ -1293,18 +1296,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models Hyper-parameter tuning (Random search CV)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Models Hyper-parameter tuning (Random search CV)\n",
+    "# Searching for best parameters for top 5 models.\n",
     "\n",
-    "# parameters dictionary\n",
-    "param_distributions = {\n",
-    "    'learning_rate' : [0.1, 0.01, 0.02],\n",
-    "    'n_estimators' : [100],\n",
-    "}"
+    "# parameters dictionaries \n",
+    "param_dist_knn = {\n",
+    "    'n_neighbors' : [5 , 7 ,9 ,11],\n",
+    "    'weights' : ['uniform', 'distance'],\n",
+    "}\n",
+    "\n",
+    "param_dist_randf = {\n",
+    "    'min_samples_split' : [2, 3],\n",
+    "    'n_estimators' : [100, 120, 150],\n",
+    "}\n",
+    "\n",
+    "param_dist_lr = {\n",
+    "    'penalty' : ['l1', 'l2'],\n",
+    "    'C' : [0.5, 1, 1.5],\n",
+    "}\n",
+    "\n",
+    "param_dist_scv = {\n",
+    "    'C' : [0.5, 1, 1.5],\n",
+    "    'kernel' : ['poly', 'rbf', 'sigmoid'],\n",
+    "    'degree' : [1, 3, 4],\n",
+    "}\n",
+    "\n",
+    "param_dist_xgb = {\n",
+    "    'learning_rate': [0.01, 0.1, 0.2],\n",
+    "    'n_estimators': [100, 150, 200],\n",
+    "    'max_depth': [5, 6, 7],\n",
+    "    'subsample': 1,\n",
+    "    'colsample_bytree': [0.3, 0.4],\n",
+    "    'gamma': [0, 1, 2],\n",
+    "    'use_label_encoder' : False,\n",
+    "    'eval_metric' : 'logloss'\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "names = [KNeighborsClassifier(), RandomForestClassifier(), LogisticRegression(), SVC(), \"XGB\"]\n",
+    "params = [param_dist_knn, param_dist_randf, param_dist_lr, param_dist_scv, param_dist_xgb, XGBClassifier()]\n",
+    "mod_params = zip(names, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run random search and return best parameters.\n",
+    "for model , params in mod_params:\n",
+    "    rand_search = RandomizedSearchCV(model, param_distributions=params, n_jobs= -1)\n",
+    "    rand_search.fit(x_train, y_train)\n",
+    "    print(f\"The best estimators for {model} are :\")\n",
+    "    print(rand_search.best_estimator_, '\\n')"
    ]
   }
  ],
