2nd round of hyper parameters tuning complete

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -1273,8 +1273,7 @@
     }
    ],
    "source": [
-    "# Model training without hyper parameters\n",
-    "from sklearn.metrics import r2_score\n",
+    "# Model training without hyper parameters and displaying accuracy scores.\n",
     "names = [\"SVC\", \"Logistic Regression\", \"Decision Trees\", \"Random Forest\", \"KNN\", \"XGBClassifier\"]\n",
     "\n",
     "classifiers = {\n",
@@ -1304,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,48 +1311,90 @@
     "\n",
     "# parameters dictionaries \n",
     "param_dist_knn = {\n",
+    "    'p' : [1, 2, 3, 4],\n",
     "    'n_neighbors' : [5 , 7 ,9 ,11],\n",
     "    'weights' : ['uniform', 'distance'],\n",
     "}\n",
     "\n",
     "param_dist_randf = {\n",
-    "    'min_samples_split' : [2, 3],\n",
-    "    'n_estimators' : [100, 120, 150],\n",
+    "    'min_samples_split' : [2, 3, 4],\n",
+    "    'n_estimators' : [100, 120, 150, 200],\n",
     "}\n",
     "\n",
     "param_dist_lr = {\n",
     "    'penalty' : ['l1', 'l2'],\n",
-    "    'C' : [0.5, 1, 1.5],\n",
+    "    'C' : [0.5, 1, 1.5, 2],\n",
     "}\n",
     "\n",
     "param_dist_scv = {\n",
     "    'C' : [0.5, 1, 1.5],\n",
-    "    'kernel' : ['poly', 'rbf', 'sigmoid'],\n",
+    "    'kernel' : ['linear', 'poly', 'rbf', 'sigmoid'],\n",
     "    'degree' : [1, 3, 4],\n",
+    "    'probability' : [True, False]\n",
     "}\n",
     "\n",
     "param_dist_xgb = {\n",
     "    'learning_rate': [0.01, 0.1, 0.2],\n",
     "    'n_estimators': [100, 150, 200],\n",
     "    'max_depth': [5, 6, 7],\n",
-    "    'subsample': 1,\n",
+    "    'subsample': [1, 2],\n",
     "    'colsample_bytree': [0.3, 0.4],\n",
     "    'gamma': [0, 1, 2],\n",
-    "    'use_label_encoder' : False,\n",
-    "    'eval_metric' : 'logloss'\n",
+    "    'use_label_encoder' : [False],\n",
+    "    'eval_metric' : ['logloss']\n",
     "    \n",
     "}\n",
     "\n",
-    "names = [KNeighborsClassifier(), RandomForestClassifier(), LogisticRegression(), SVC(), \"XGB\"]\n",
+    "names = [KNeighborsClassifier(), RandomForestClassifier(), LogisticRegression(), SVC(), XGBClassifier()]\n",
     "params = [param_dist_knn, param_dist_randf, param_dist_lr, param_dist_scv, param_dist_xgb, XGBClassifier()]\n",
     "mod_params = zip(names, params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best estimators for KNeighborsClassifier() are :\n",
+      "KNeighborsClassifier(n_neighbors=7, weights='distance') \n",
+      "\n",
+      "The best estimators for RandomForestClassifier() are :\n",
+      "RandomForestClassifier(min_samples_split=3, n_estimators=200) \n",
+      "\n",
+      "The best estimators for LogisticRegression() are :\n",
+      "LogisticRegression(C=2) \n",
+      "\n",
+      "The best estimators for SVC() are :\n",
+      "SVC(C=1, kernel='linear', probability=True) \n",
+      "\n",
+      "The best estimators for XGBClassifier(base_score=None, booster=None, colsample_bylevel=None,\n",
+      "              colsample_bynode=None, colsample_bytree=None,\n",
+      "              enable_categorical=False, gamma=None, gpu_id=None,\n",
+      "              importance_type=None, interaction_constraints=None,\n",
+      "              learning_rate=None, max_delta_step=None, max_depth=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
+      "              predictor=None, random_state=None, reg_alpha=None,\n",
+      "              reg_lambda=None, scale_pos_weight=None, subsample=None,\n",
+      "              tree_method=None, validate_parameters=None, verbosity=None) are :\n",
+      "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+      "              colsample_bynode=1, colsample_bytree=0.3,\n",
+      "              enable_categorical=False, eval_metric='logloss', gamma=1,\n",
+      "              gpu_id=-1, importance_type=None, interaction_constraints='',\n",
+      "              learning_rate=0.1, max_delta_step=0, max_depth=7,\n",
+      "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+      "              n_estimators=150, n_jobs=8, num_parallel_tree=1, predictor='auto',\n",
+      "              random_state=0, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
+      "              subsample=1, tree_method='exact', use_label_encoder=False,\n",
+      "              validate_parameters=1, verbosity=None) \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Run random search and return best parameters.\n",
     "for model , params in mod_params:\n",
@@ -1361,6 +1402,45 @@
     "    rand_search.fit(x_train, y_train)\n",
     "    print(f\"The best estimators for {model} are :\")\n",
     "    print(rand_search.best_estimator_, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of SVC model is 73.36%\n",
+      "Accuracy of Logistic Regression model is 73.62%\n",
+      "Accuracy of KNN model is 68.34%\n",
+      "Accuracy of Random Forest model is 73.49%\n",
+      "Accuracy of XGBClassifier model is 74.90%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Re training models with best fit parameters\n",
+    "names = [\"SVC\", \"Logistic Regression\", \"KNN\", \"Random Forest\",  \"XGBClassifier\"]\n",
+    "\n",
+    "classifiers = {\n",
+    "    SVC(C=1, kernel='linear', probability=True),\n",
+    "    LogisticRegression(C=2),\n",
+    "    KNeighborsClassifier(n_neighbors=7, weights='distance'),\n",
+    "    RandomForestClassifier(min_samples_split=3, n_estimators=200),\n",
+    "    XGBClassifier(learning_rate=0.2, n_estimators=100, max_depth=6, subsample=1, colsample_bytree=0.3,\n",
+    "    gamma=0, use_label_encoder=False, eval_metric='logloss')\n",
+    "}\n",
+    "\n",
+    "models = zip(names, classifiers)\n",
+    "\n",
+    "# Training each model and printing accuracy stores\n",
+    "for name, model in models:\n",
+    "    model_ = model.fit(x_train, y_train)\n",
+    "    prediction = model_.predict(x_test)\n",
+    "    print(f\"Accuracy of {name} model is {'{0:.2f}'.format(accuracy_score(prediction, y_test)*100)}%\")"
    ]
   }
  ],
