--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,6 +1314,7 @@
     "    'p' : [1, 2, 3, 4],\n",
     "    'n_neighbors' : [5 , 7 ,9 ,11],\n",
     "    'weights' : ['uniform', 'distance'],\n",
+    "    'leaf_size': [20, 30, 35, 40] \n",
     "}\n",
     "\n",
     "param_dist_randf = {\n",
@@ -1352,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1363,13 +1364,13 @@
       "KNeighborsClassifier(n_neighbors=7, weights='distance') \n",
       "\n",
       "The best estimators for RandomForestClassifier() are :\n",
-      "RandomForestClassifier(min_samples_split=3, n_estimators=200) \n",
+      "RandomForestClassifier(min_samples_split=4, n_estimators=200) \n",
       "\n",
       "The best estimators for LogisticRegression() are :\n",
       "LogisticRegression(C=2) \n",
       "\n",
       "The best estimators for SVC() are :\n",
-      "SVC(C=1, kernel='linear', probability=True) \n",
+      "SVC(C=1.5, degree=4, kernel='sigmoid') \n",
       "\n",
       "The best estimators for XGBClassifier(base_score=None, booster=None, colsample_bylevel=None,\n",
       "              colsample_bynode=None, colsample_bytree=None,\n",
@@ -1382,10 +1383,10 @@
       "              reg_lambda=None, scale_pos_weight=None, subsample=None,\n",
       "              tree_method=None, validate_parameters=None, verbosity=None) are :\n",
       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-      "              colsample_bynode=1, colsample_bytree=0.3,\n",
+      "              colsample_bynode=1, colsample_bytree=0.4,\n",
       "              enable_categorical=False, eval_metric='logloss', gamma=1,\n",
       "              gpu_id=-1, importance_type=None, interaction_constraints='',\n",
-      "              learning_rate=0.1, max_delta_step=0, max_depth=7,\n",
+      "              learning_rate=0.1, max_delta_step=0, max_depth=6,\n",
       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
       "              n_estimators=150, n_jobs=8, num_parallel_tree=1, predictor='auto',\n",
       "              random_state=0, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
@@ -1406,18 +1407,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of SVC model is 73.36%\n",
-      "Accuracy of Logistic Regression model is 73.62%\n",
-      "Accuracy of KNN model is 68.34%\n",
-      "Accuracy of Random Forest model is 73.49%\n",
-      "Accuracy of XGBClassifier model is 74.90%\n"
+      "Accuracy of SVC model is 74.90%\n",
+      "Accuracy of Logistic Regression model is 73.49%\n",
+      "Accuracy of KNN model is 73.36%\n",
+      "Accuracy of Random Forest model is 72.59%\n",
+      "Accuracy of XGBClassifier model is 68.34%\n"
      ]
     }
    ],
@@ -1429,9 +1430,9 @@
     "    SVC(C=1, kernel='linear', probability=True),\n",
     "    LogisticRegression(C=2),\n",
     "    KNeighborsClassifier(n_neighbors=7, weights='distance'),\n",
-    "    RandomForestClassifier(min_samples_split=3, n_estimators=200),\n",
-    "    XGBClassifier(learning_rate=0.2, n_estimators=100, max_depth=6, subsample=1, colsample_bytree=0.3,\n",
-    "    gamma=0, use_label_encoder=False, eval_metric='logloss')\n",
+    "    RandomForestClassifier(min_samples_split=4, n_estimators=200),\n",
+    "    XGBClassifier(learning_rate=0.1, n_estimators=150, max_depth=6, subsample=1, colsample_bytree=0.4,\n",
+    "    gamma=1, use_label_encoder=False, eval_metric='logloss')\n",
     "}\n",
     "\n",
     "models = zip(names, classifiers)\n",
